--- a/codigos_python/aprofundamento_Rasterio.ipynb
+++ b/codigos_python/aprofundamento_Rasterio.ipynb
@@ -22,7 +22,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I-fAblCUJ0uD",
-        "outputId": "0d523a50-9fc0-43e2-abe8-6f2b810fd2ce"
+        "outputId": "6c8131b1-b16c-473f-d59a-011e022bafa3"
       },
       "outputs": [
         {
@@ -31,24 +31,24 @@
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting rasterio\n",
-            "  Downloading rasterio-1.3.6-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (20.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.1/20.1 MB\u001b[0m \u001b[31m30.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting click-plugins\n",
-            "  Downloading click_plugins-1.1.1-py2.py3-none-any.whl (7.5 kB)\n",
-            "Collecting cligj>=0.5\n",
-            "  Downloading cligj-0.7.2-py3-none-any.whl (7.1 kB)\n",
-            "Requirement already satisfied: attrs in /usr/local/lib/python3.9/dist-packages (from rasterio) (22.2.0)\n",
-            "Collecting snuggs>=1.4.1\n",
-            "  Downloading snuggs-1.4.7-py3-none-any.whl (5.4 kB)\n",
-            "Requirement already satisfied: setuptools in /usr/local/lib/python3.9/dist-packages (from rasterio) (67.6.1)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.9/dist-packages (from rasterio) (2022.12.7)\n",
-            "Collecting affine\n",
+            "  Downloading rasterio-1.3.7-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (21.3 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.3/21.3 MB\u001b[0m \u001b[31m69.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting affine (from rasterio)\n",
             "  Downloading affine-2.4.0-py3-none-any.whl (15 kB)\n",
-            "Requirement already satisfied: numpy>=1.18 in /usr/local/lib/python3.9/dist-packages (from rasterio) (1.22.4)\n",
-            "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.9/dist-packages (from rasterio) (8.1.3)\n",
-            "Requirement already satisfied: pyparsing>=2.1.6 in /usr/local/lib/python3.9/dist-packages (from snuggs>=1.4.1->rasterio) (3.0.9)\n",
+            "Requirement already satisfied: attrs in /usr/local/lib/python3.10/dist-packages (from rasterio) (23.1.0)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from rasterio) (2022.12.7)\n",
+            "Requirement already satisfied: click>=4.0 in /usr/local/lib/python3.10/dist-packages (from rasterio) (8.1.3)\n",
+            "Collecting cligj>=0.5 (from rasterio)\n",
+            "  Downloading cligj-0.7.2-py3-none-any.whl (7.1 kB)\n",
+            "Requirement already satisfied: numpy>=1.18 in /usr/local/lib/python3.10/dist-packages (from rasterio) (1.22.4)\n",
+            "Collecting snuggs>=1.4.1 (from rasterio)\n",
+            "  Downloading snuggs-1.4.7-py3-none-any.whl (5.4 kB)\n",
+            "Collecting click-plugins (from rasterio)\n",
+            "  Downloading click_plugins-1.1.1-py2.py3-none-any.whl (7.5 kB)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from rasterio) (67.7.2)\n",
+            "Requirement already satisfied: pyparsing>=2.1.6 in /usr/local/lib/python3.10/dist-packages (from snuggs>=1.4.1->rasterio) (3.0.9)\n",
             "Installing collected packages: snuggs, cligj, click-plugins, affine, rasterio\n",
-            "Successfully installed affine-2.4.0 click-plugins-1.1.1 cligj-0.7.2 rasterio-1.3.6 snuggs-1.4.7\n"
+            "Successfully installed affine-2.4.0 click-plugins-1.1.1 cligj-0.7.2 rasterio-1.3.7 snuggs-1.4.7\n"
           ]
         }
       ],
@@ -83,7 +83,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "edc5d5b8-a010-40c9-bbab-704ec83d3487"
+        "outputId": "62fb5eb3-2534-4d4a-fd44-08ed86867993"
       },
       "execution_count": null,
       "outputs": [
@@ -100,7 +100,7 @@
       "cell_type": "code",
       "source": [
         "#objeto do tipo rasterio.io.DatasetReader\n",
-        "image = rio.open(\"/content/gdrive/MyDrive/dados_redes_neurais_imagens/test/test/barbacena_landsat8_0.tif\"); \n",
+        "image = rio.open(\"/content/gdrive/MyDrive/dados_redes_neurais_imagens/classes/imgs_BQ_NN/barbacena_landsat8_0.tif\");\n",
         "print(type(image))\n",
         "show(image, title = \"Cidade de Barbacena\")"
       ],
@@ -110,7 +110,7 @@
           "height": 457
         },
         "id": "F6VgNTQ7KFMr",
-        "outputId": "5cafc69a-8a10-46d3-8225-c6557026fade"
+        "outputId": "461c75ad-5588-4aa8-fbaa-b9af1b600875"
       },
       "execution_count": null,
       "outputs": [
@@ -139,7 +139,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 64
+          "execution_count": 8
         }
       ]
     },
@@ -447,7 +447,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import torch "
+        "import torch"
       ],
       "metadata": {
         "id": "iF-FfKOyhQ4V"
